<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddDishFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dish_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/name"
                android:inputType="text"
                android:textStyle="bold"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/add_dish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/add_dish"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:enabled="false"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@drawable/button_selector"
                android:textSize="16sp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:enabled="true"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@drawable/button_selector"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>